# django_and_actix

./: .gitignore  Dockerfile  docker-compose.yml
actix_backend/: Cargo.toml
actix_backend/src/: main.rs
actix_backend/src/api/: helpers.rs  mod.rs  services.rs
actix_backend/src/models/: models.rs
config/: requirements.txt
config/api/: urls.py
config/api/blog/: serializers.py  viewsets.py
config/api/users/: serializers.py  viewsets.py
config/blog/: models.py
config/blog/migrations/: 0001_initial.py
config/config/: settings.py  urls.py
